add random and sort button

--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -39,3 +39,6 @@
 <div class="remaining">
 	<div>{{ remaining() }} items left</div>
 </div>
+
+<button *ngIf="remaining()>=5" (click)="random()">random</button>
+<button (click)="sort()">order by priority</button>
