--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>{{title}}</h1>
-<app-todos></app-todos>
-<countdown [config]="{leftTime: 30, demand: true}"></countdown>
+<div class="container">
+	<h1>{{title}}</h1>
+	<app-todos></app-todos>
+	<countdown [config]="{leftTime: 30, demand: true}"></countdown>
+</div>
+
