--- a/src/app/todos/todos.component.css
+++ b/src/app/todos/todos.component.css
@@ -13,8 +13,7 @@ body {
 }
 
 .todo-item {
-	background-color: beige;
-	width: 15rem;
+	width: 80%;
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
 }
@@ -25,8 +24,9 @@ body {
 }
 
 .todo-title {
+	font-size: 1.2rem;
 	display : inline-flex;
-	width: 9rem;
+	width: 50%;
 	margin-right: 1rem;
 }
 
@@ -35,6 +35,7 @@ body {
 }
 
 .todo-input {
+	margin-right: 25%;
 	width: 25%;
 	margin-top: 1rem;
 	margin-bottom: 1rem;
@@ -42,4 +43,12 @@ body {
 
 .gitBitsDun {
 	background-color: chocolate;
+}
+
+.todo-priority {
+	width: 50%;
+}
+
+.btn {
+	margin-right: 1rem;
 }
